--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -15,13 +15,13 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 30px;">
                     <tr>
                         <!-- Columna izquierda vacía -->
-                        <td width="50%" style="vertical-align: top;">
+                        <td width="30%" style="vertical-align: top;">
                             <!-- Vacía -->
                         </td>
                         
                         <!-- Columna derecha - Título principal -->
-                        <td width="50%" style="vertical-align: top; text-align: right;">
-                            <div style="font-size: 18px; font-weight: bold; color: #333; text-align: right;">
+                        <td width="70%" style="vertical-align: top; text-align: right;">
+                            <div style="font-size: 14px; font-weight: bold; color: #603904; text-align: right;">
                                 ANETCORE otorga el presente certificado de conformidad<br>
                                 (Esquema de certificación 6 según ISO/IEC 17067) para:
                             </div>
@@ -34,18 +34,18 @@
                     <tr>
                         <!-- Columna izquierda -->
                         <td width="50%" style="vertical-align: top; padding-right: 20px;">
-                            <div style="font-size: 16px; font-weight: bold; color: #333; margin-bottom: 10px; line-height: 1.3;">[NOMBRE_INSTALACION]</div>
+                            <div style="font-size: 16px; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3;">[NOMBRE_INSTALACION]</div>
                             <div style="font-size: 12px; color: #333; margin-bottom: 20px;">[DIRECCION_INSTALACION]</div>
                             
-                            <div style="font-size: 12px; font-weight: bold; color: #333; margin-bottom: 5px;">RAZÓN SOCIAL:</div>
-                            <div style="font-size: 14px; font-weight: bold; color: #333; margin-bottom: 5px;">[RAZON_SOCIAL]</div>
-                            <div style="font-size: 16px; font-weight: bold; color: #333;">NIT [NIT]</div>
+                            <div style="font-size: 12px; font-weight: bold; color: #603904; margin-bottom: 5px;">RAZÓN SOCIAL:</div>
+                            <div style="font-size: 14px; font-weight: bold; color: #603904; margin-bottom: 5px;">[RAZON_SOCIAL]</div>
+                            <div style="font-size: 16px; font-weight: bold; color: #603904;">NIT [NIT]</div>
                         </td>
                         
                         <!-- Columna derecha -->
                         <td width="50%" style="vertical-align: top; padding-left: 20px;">
-                            <div style="font-size: 12px; font-weight: bold; color: #333; margin-bottom: 5px;">Número de certificado:</div>
-                            <div style="font-size: 18px; font-weight: bold; color: #333; margin-bottom: 20px;">[NUMERO_CERTIFICADO]</div>
+                            <div style="font-size: 18px; font-weight: bold; color: #603904; margin-bottom: 5px;">Número de certificado:</div>
+                            <div style="font-size: 18px; font-weight: bold; color: #603904; margin-bottom: 20px;">[NUMERO_CERTIFICADO]</div>
                             
                             <div style="font-size: 12px; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]</div>
                             <div style="font-size: 12px; color: #333; margin-bottom: 20px;">Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
@@ -63,7 +63,7 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 30px;">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 11px; color: #333; line-height: 1.4;">[REQUISITOS_CERTIFICADO]</div>
+                            <div style="font-size: 11px; color: #9d7120; line-height: 1.4;">[REQUISITOS_CERTIFICADO]</div>
                         </td>
                     </tr>
                 </table>
@@ -72,8 +72,8 @@
                 <table width="100%" cellpadding="0" cellspacing="0">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 10px; color: #333; margin-bottom: 5px;">Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE</div>
-                            <div style="font-size: 10px; color: #333;">Carrera 11a N. 94-46, Bogotá ∙ Página web: www.anetcore.com ∙ comercial@anetcore.com</div>
+                            <div style="font-size: 10px; color: #9d7120; margin-bottom: 5px;">Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE</div>
+                            <div style="font-size: 10px; color: #9d7120;">Carrera 11a N. 94-46, Bogotá  Página web: <a href="https://anetcore.com/"> www.anetcore.com </a> comercial@anetcore.com</div>
                         </td>
                     </tr>
                 </table>
