Eliminar línea horizontal entre header y contenido
- Quitar margin-bottom del header (30px  0px)
- Agregar margin-top: 0px a la tabla de contenido
- Eliminar separación visual entre título y contenido principal
- Layout más limpio sin líneas divisorias

--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -12,7 +12,7 @@
             <td style="padding: 20px;">
                 
                 <!-- HEADER - Dos columnas -->
-                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 30px;">
+                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <!-- Columna izquierda vacía -->
                         <td width="30%" style="vertical-align: top;">
@@ -30,7 +30,7 @@
                 </table>
                 
                 <!-- FILA 1 - Dos columnas -->
-                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 30px;">
+                <table width="100%" cellpadding="0" cellspacing="0" style="margin-top: 0px; margin-bottom: 30px;">
                     <tr>
                         <!-- Columna izquierda -->
                         <td width="50%" style="vertical-align: top; padding-right: 20px;">
