Eliminar <br> del título para quitar línea horizontal
- Separar título en dos divs independientes
- Eliminar <br> que puede estar generando línea visual
- Mantener mismo formato pero sin salto de línea HTML
- Probar si esto elimina la línea entre header y contenido

--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -22,7 +22,9 @@
                         <!-- Columna derecha - Título principal -->
                         <td width="70%" style="vertical-align: top; text-align: right;">
                             <div style="font-size: 14px; font-weight: bold; color: #603904; text-align: right;">
-                                ANETCORE otorga el presente certificado de conformidad<br>
+                                ANETCORE otorga el presente certificado de conformidad
+                            </div>
+                            <div style="font-size: 14px; font-weight: bold; color: #603904; text-align: right;">
                                 (Esquema de certificación 6 según ISO/IEC 17067) para:
                             </div>
                         </td>
