Eliminar reemplazos que agregan bordes en TCPDF
- Limpiar función convertir_html_para_tcpdf
- Eliminar str_replace que agregan border-bottom
- Mantener solo limpieza de scripts y estilos
- Evitar líneas horizontales automáticas

--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -12,7 +12,7 @@
             <td style="padding: 20px;">
                 
                 <!-- HEADER - Dos columnas -->
-                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
+                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 30px;">
                     <tr>
                         <!-- Columna izquierda vacía -->
                         <td width="30%" style="vertical-align: top;">
@@ -22,9 +22,7 @@
                         <!-- Columna derecha - Título principal -->
                         <td width="70%" style="vertical-align: top; text-align: right;">
                             <div style="font-size: 14px; font-weight: bold; color: #603904; text-align: right;">
-                                ANETCORE otorga el presente certificado de conformidad
-                            </div>
-                            <div style="font-size: 14px; font-weight: bold; color: #603904; text-align: right;">
+                                ANETCORE otorga el presente certificado de conformidad<br>
                                 (Esquema de certificación 6 según ISO/IEC 17067) para:
                             </div>
                         </td>
@@ -32,7 +30,7 @@
                 </table>
                 
                 <!-- FILA 1 - Dos columnas -->
-                <table width="100%" cellpadding="0" cellspacing="0" style="margin-top: 0px; margin-bottom: 30px;">
+                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 30px;">
                     <tr>
                         <!-- Columna izquierda -->
                         <td width="50%" style="vertical-align: top; padding-right: 20px;">
