--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Certificado de Conformidad GLP</title>
 </head>
-<body style="font-family: Arial, sans-serif; margin: 0; padding: 20px; background: white;">
+<body style="font-family: Arial, sans-serif; margin: 0; padding: 0; background: white;">
     
     <!-- Container principal -->
     <table width="100%" cellpadding="0" cellspacing="0" style="background: white;">
         <tr>
-            <td style="padding: 20px;">
+            <td style="padding: 0;">
                 
                 <!-- HEADER - Dos columnas -->
-                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 30px;">
+                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <!-- Columna izquierda vacía -->
                         <td width="30%" style="vertical-align: top;">
@@ -30,7 +30,7 @@
                 </table>
                 
                 <!-- FILA 1 - Dos columnas -->
-                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 30px;">
+                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <!-- Columna izquierda -->
                         <td width="50%" style="vertical-align: top; padding-right: 20px;">
@@ -60,7 +60,7 @@
                 </table>
                 
                 <!-- FILA 2 - Una columna centrada -->
-                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 30px;">
+                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <td style="text-align: center;">
                             <div style="font-size: 11px; color: #9d7120; line-height: 1.4;">[REQUISITOS_CERTIFICADO]</div>
