--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Certificado de Conformidad GLP</title>
 </head>
-<body style="font-family: Arial, sans-serif; margin: 0; padding: 0; background-image: url('images/bg-pdf-antecore.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+<body style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
     
     <!-- Container principal -->
     <table width="100%" cellpadding="0" cellspacing="0" style="background: transparent;">
